k8s/client-cluster-ip-service.yml
apiVersion: v1

kind: Service
metadata:
    name: client-cluster-ip-service

spec:
    type: ClusterIP # Connect other objects in the node
    selector:
        component: web
    ports:
        - port: 3000
          targetPort: 3000
