k8s/postgres-cluster-ip-service.yml
apiVersion: v1

kind: Service
metadata:
    name: postgres-cluster-ip-service

spec:
    type: ClusterIP # Connect other objects in the node
    selector:
        component: postgres
    ports:
        - port: 5432
          targetPort: 5432
