k8s/ingress-service.yml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        
        # HTTPS - Google Domains
        # certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
        # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    # tls:
    #   - hosts:
    #       - test.nathzi1505.xyz
    #       - www.test.nathzi1505.xyz
    #     secretName: test-nathzi1505-xyz
    rules:
        # - host: test.nathzi1505.xyz
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
        # - host: www.test.nathzi1505.xyz
        #   http:
        #     paths:
        #         - path: /?(.*)
        #           backend:
        #             serviceName: client-cluster-ip-service
        #             servicePort: 3000
        #         - path: /api/?(.*)
        #           backend:
        #             serviceName: server-cluster-ip-service
        #             servicePort: 5000
